<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/searchField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_2m"
        android:background="@drawable/box_shadowed"
        android:elevation="@dimen/_0_5m"
        android:hint="@string/hint_address"
        android:padding="@dimen/_2m"
        tools:targetApi="lollipop" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <FrameLayout
        android:id="@+id/searchListBackground"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/_3m"
        android:paddingStart="@dimen/_1m"
        android:paddingEnd="@dimen/_1m"
        android:background="@android:color/white">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/placePickerList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_8m"/>
    </FrameLayout>

</FrameLayout>