<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/viewPager"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/navigationView" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_create_event"
        android:layout_above="@id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        app:fabSize="normal"
        android:layout_margin="@dimen/_2m"
        app:backgroundTint="@color/colorAccent"
        android:tint="@android:color/white"
        android:src="@mipmap/ic_plus"/>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        app:elevation="@dimen/_2m"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        android:padding="@dimen/_0_5m"
        app:menu="@menu/navigation" />

</RelativeLayout>